--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "eslint-config-react-app": "^7.0.1",
+    "gsap": "^3.10.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "sass": "^1.52.3",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
